Use scroll-margin-top on h2 elements to prevent markdown-settings header from covering.

--- a/themes/default/stylesheets/docs.scss
+++ b/themes/default/stylesheets/docs.scss
@@ -244,6 +244,8 @@ body {
         font-weight: 400;
         // line-height: 1.25;
         line-height: 1.875rem;
+
+        scroll-margin-top: 44px;
     }
 
     h3 {
